tests/fw_rules_tests/policies/test2-networkpolicy.yaml

 
### Second policy. Enables traffic to namespace kube-system from pods in namespace ibm-system on port 53
### It has a (common) typo, as a result of which traffic to kube-system is allow for all through ports 53 with UDP and TCP

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-default-to-ibm-system-on-53-with-typo
  namespace: kube-system-new
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - namespaceSelector:
          matchLabels:
            unique-label: ibm-system-newNameSpace
            #unique-label: defaultNameSpace
    - ports:      # the typo is here
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
